crates/vite_task_bin/tests/e2e_snapshots/fixtures/summary-output/snapshots/last details after multi task run shows saved summary.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run -r build # populate summary file
~/packages/a$ print built-a
built-a

~/packages/b$ print built-b
built-b

---
[vp run] 0/2 cache hit (0%). (Run `vp run --verbose` for full details)
> vp run --last-details # display saved summary

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   2 tasks • 0 cache hits • 2 cache misses
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] @summary/a#build: ~/packages/a$ print built-a ✓
      → Cache miss: no previous cache entry found
  ·······················································
  [2] @summary/b#build: ~/packages/b$ print built-b ✓
      → Cache miss: no previous cache entry found
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
