crates/vite_task_bin/tests/e2e_snapshots/fixtures/summary-output/snapshots/last details with no previous run shows error.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
[1]> vp run --last-details
No previous run summary found. Run a task first to generate a summary.
