crates/vite_task_bin/tests/e2e_snapshots/fixtures/summary-output/snapshots/multi task all cache miss shows compact summary.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run -r build
~/packages/a$ print built-a
built-a

~/packages/b$ print built-b
built-b

---
[vp run] 0/2 cache hit (0%). (Run `vp run --verbose` for full details)
