crates/vite_task_bin/tests/e2e_snapshots/fixtures/summary-output/snapshots/multi task verbose with cache hits shows full summary.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run -r build # first run, populate cache
~/packages/a$ vtt print built-a
built-a

~/packages/b$ vtt print built-b
built-b

---
vt run: 0/2 cache hit (0%). (Run `vt run --last-details` for full details)
> vt run -r -v build # second run, verbose with cache hits
~/packages/a$ vtt print built-a ◉ cache hit, replaying
built-a

~/packages/b$ vtt print built-b ◉ cache hit, replaying
built-b


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   2 tasks • 2 cache hits • 0 cache misses
Performance:  100% cache hit rate, <duration> saved in total

Task Details:
────────────────────────────────────────────────
  [1] @summary/a#build: ~/packages/a$ vtt print built-a ✓
      → Cache hit - output replayed - <duration> saved
  ·······················································
  [2] @summary/b#build: ~/packages/b$ vtt print built-b ✓
      → Cache hit - output replayed - <duration> saved
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
