crates/vite_task_bin/tests/e2e_snapshots/fixtures/summary-output/snapshots/multi task with cache hits shows compact summary.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run -r build # first run, all miss
~/packages/a$ vtt print built-a
built-a

~/packages/b$ vtt print built-b
built-b

---
vt run: 0/2 cache hit (0%). (Run `vt run --last-details` for full details)
> vt run -r build # second run, all hit
~/packages/a$ vtt print built-a ◉ cache hit, replaying
built-a

~/packages/b$ vtt print built-b ◉ cache hit, replaying
built-b

---
vt run: 2/2 cache hit (100%), <duration> saved. (Run `vt run --last-details` for full details)
