crates/vite_task_bin/tests/e2e_snapshots/fixtures/summary-output/snapshots/single task cache hit shows compact summary.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/a
---
> vt run build # first run, cache miss
~/packages/a$ vtt print built-a
built-a
> vt run build # second run, cache hit → compact summary
~/packages/a$ vtt print built-a ◉ cache hit, replaying
built-a

---
vt run: cache hit, <duration> saved.
